Take Away CSS done

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 .NavBarSection {
-    font-size: 1.07rem;
+    font-size: 1rem;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px, rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
   }
   .navbar-toggler{
@@ -22,3 +22,35 @@
     font-weight: 600;
   }
   
+
+/* Style the navigation bar */
+nav {
+  background-color: #333;
+  /* Change the background color as needed */
+  color: #fff;
+  /* Change the text color as needed */
+  padding: 10px;
+}
+
+nav ul {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-around;
+}
+
+nav li {
+  display: inline;
+}
+
+nav a {
+  text-decoration: none;
+  color: #fff;
+  /* Change the link color as needed */
+  padding: 8px;
+}
+
+/* Change link color on hover */
+nav a:hover {
+  color: #ffd700;
+  /* Change the hover color as needed */
+}
