--- a/frontend/src/cards/FoodCards/foodcard.css
+++ b/frontend/src/cards/FoodCards/foodcard.css
@@ -55,13 +55,13 @@
 }
 
 .aval {
-  left: 180px;
+  left: 130px;
   /* padding: 2px; */
   border-radius: 15px;
   background-color: #F5F5F5;
   color: green;
   width: 15px;
-  top:-203px;
+  top:-90px;
 }
 
 .notaval {
@@ -103,18 +103,17 @@
   display: flex;
   padding: 0.75rem;
   flex-direction: column;
-  gap: 0.25rem;
   border-radius: 1rem;
-  min-height: 20rem;
+  max-height: 20rem;
   background-color: #F9FAFB;
-  width: 200px;
+  width: 150px;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
 }
 
 .my-alert__unique1 {
   border-radius: 0.75rem;
-  height: 12rem;
+  height: 5rem;
   background-color: #374151;
   max-height: 270px;
 }
@@ -122,7 +121,7 @@
 .my-alert__unique1 > .img-card
 {
   border-radius: 0.75rem;
-  height: 12rem;
+  height: 5rem;
   background-color: #374151;
   max-height: 240px;
   object-fit: cover;
@@ -149,8 +148,8 @@
 }
 
 .cust-btn-cart {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+  padding-top: 0.2rem;
+  padding-bottom: 0.2rem;
   border-radius: 0.375rem;
   color: #F9FAFB;
   background-color: #374151;
