--- a/frontend/src/components/DineIn/dinein.css
+++ b/frontend/src/components/DineIn/dinein.css
@@ -1,8 +1,8 @@
 .dinein-navbar-cont{
-    background-color: rgb(94, 124, 145);
+    background-color: rgb(57, 145, 208);
     width: 100vw;
-    padding: 30px 20px 30px 20px;
-    margin-left: 30px;
+    padding: 5px 0px 0px 0px;
+    margin-left: 15px;
     display: flex;
     flex-direction: row;
     
@@ -130,7 +130,7 @@ option{
 /* for media quries */
 @media only screen and (max-width: 979px) {
     .dinein-navbar-cont{
-        width: 800px;
+        width: 500px;
     }
 
 }
@@ -304,41 +304,42 @@ h2 {
 }
 
 .over-order-page{
-  overflow: scroll;
   height: 5200px;
 }
 
 /* food order and tracking page */
 .food-order-cont{
-  overflow-y: scroll;
-  min-width: 670px;
+  min-width: fit-content;
   margin-left: auto;
   margin-right: auto;
   padding-left: 10px;
   padding-right: 10px;
-  max-height: 700px;
+  max-height: 100vh;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
 }
 
 .food-category-bar{
-  max-width: 1000px ;
-  height: 100px;
+  max-width: 100vw ;
+  height: 50px;
   box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  padding: 15px 20px;
+  padding: 5px 10px;
   background-color: #95a5a6;
 }
 
 .foo-cat{
   display: flex;
-  flex-wrap: wrap;
-  width: 150px;
+
+  flex-direction: row;
+    /* This is the default value, so you can omit it if you want */
+  justify-content: space-between;
+  width: 200px;
 }
 
 #foodCategory{
-  margin-top: -10px;
+  margin-top: 0px;
 }
 .date-time{
   display: flex;
