--- a/frontend/src/components/DineIn/dinein.css
+++ b/frontend/src/components/DineIn/dinein.css
@@ -1,15 +1,55 @@
+.inside-container
+{
+  max-width: 100vw;
+  padding-right: 30px;
+}
+
+/* Style for the button */
+.adduser {
+  display: inline-block;
+  padding: 5px;
+  background-color: #3498db;
+  /* Button background color */
+  color: #000000;
+  /* Text color */
+  font-weight: bold;
+  font-size: 12px;
+  /* Bold text */
+  text-decoration: none;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+/* Hover effect */
+.adduser:hover {
+  background-color: #217dbb;
+  /* Change background color on hover */
+}
+
+.select-waiter
+{
+  font-size: 14px;
+  border-radius: 10px;
+  margin-left: 5px;
+  cursor: pointer;
+  background-color: #E55381;
+  font-weight: bold;
+}
+
 .dinein-navbar-cont{
-    background-color: rgb(57, 145, 208);
-    width: 100vw;
     padding: 5px 0px 0px 0px;
-    margin-left: 15px;
     display: flex;
+    justify-content: space-around;
     flex-direction: row;
-    
+    max-width: 100%;
+    font-size: small;
 }
 
 .ind-out-cont{
-    background-color: #3c14d0;
+    background-color: #7856f0;
     padding: 8px 8px;
     border-radius: 10px;
     width: 130px;
@@ -19,6 +59,7 @@
     font-weight: bold;
     letter-spacing: 2px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    cursor: pointer;
 }
 
 option{
@@ -51,19 +92,17 @@ option{
   text-decoration: none;
   border-radius: 10px;
   /*Button Color & Border*/
-  border: 4px solid #91D171;
+  margin-left: 10px;
   color: '#000';
   background: #91D171;
   outline: none;
   /*Position, Display, Size*/
   position: relative;
   display: inline-block;
-  padding: 13px 5px;
-  cursor: pointer;
-  width: auto;
+  padding: 1px 1px;
+  width: 200px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  margin-left: 15px;
 }
 .running-order {
     /*placement for code pen*/
@@ -73,21 +112,20 @@ option{
     font-size: inherit;
     text-align: center;
     font-weight: bold;
-    letter-spacing: 2px;
+    letter-spacing: 1px;
     /* text-transform: uppercase; */
     text-decoration: none;
     border-radius: 10px;
     /*Button Color & Border*/
-    border: 4px solid #91D171;
     color:'#000';
     background: #91D171;
     outline: none;
     /*Position, Display, Size*/
     position: relative;
     display: inline-block;
-    padding: 13px 5px;
+    padding: 1px 1px;
     cursor: pointer;
-    width: auto;
+    width: 200px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     margin-left: 15px;
@@ -142,6 +180,7 @@ option{
 .pop-cont{
   text-align: center;
   margin-top: 10px;
+  max-width: 100%;
 }
 
 .modal-overlay1 {
@@ -304,7 +343,9 @@ h2 {
 }
 
 .over-order-page{
-  height: 5200px;
+  overflow-x: hidden;
+  height: 100vh;
+  width: 100vw;
 }
 
 /* food order and tracking page */
@@ -335,7 +376,8 @@ h2 {
   flex-direction: row;
     /* This is the default value, so you can omit it if you want */
   justify-content: space-between;
-  width: 200px;
+  width: 250px;
+  padding-bottom: 5px;
 }
 
 #foodCategory{
@@ -373,11 +415,12 @@ h2 {
 
 .search-container {
   position: relative;
+  padding-bottom: 5px;
 }
 
 .search-icon {
   position: absolute;
-  top: 50%;
+  top: 35%;
   right: 10px;
   transform: translateY(-50%);
   color: #777; /* Change color as needed */
