--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -25,11 +25,11 @@
 
 /* Style the navigation bar */
 nav {
-  background-color: #333;
+  background-color: #3333334c;
   /* Change the background color as needed */
   color: #fff;
   /* Change the text color as needed */
-  padding: 10px;
+  padding: 5px;
 }
 
 nav ul {
