--- a/frontend/src/cards/FoodCards/foodcard.css
+++ b/frontend/src/cards/FoodCards/foodcard.css
@@ -102,7 +102,7 @@
 .my-alert {
   display: flex;
   padding: 0.75rem;
-  flex-direction: column;
+  flex-direction: row;
   border-radius: 1rem;
   max-height: 20rem;
   background-color: #F9FAFB;
@@ -125,7 +125,7 @@
   background-color: #374151;
   max-height: 240px;
   object-fit: cover;
-  width: 100%;
+  width: 50px;
 
 }
 .my-alert__unique2 {
@@ -143,7 +143,7 @@
 
 .my-alert__unique4 {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 
 }
 
