table panel css

--- a/frontend/src/componets/FoodPanel/CRUDfood/FoodDelete.css
+++ b/frontend/src/componets/FoodPanel/CRUDfood/FoodDelete.css
@@ -6,7 +6,7 @@
     margin-right: 65%;
 }
 /* delete food heading css */
-.delete-food-heading{
+#delete-food-heading{
   
     background-color:blanchedalmond;
     text-align: center;
