--- a/frontend/src/componets/TablePanel/CRUDtable/TableDelete.css
+++ b/frontend/src/componets/TablePanel/CRUDtable/TableDelete.css
@@ -1,4 +1,4 @@
-.table-delete{
+.Table-delete{
     background-color: #5a7bdca6;
     border-radius: 20px;
     box-shadow: rgba(99, 175, 146, 0.673) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
@@ -17,14 +17,16 @@
 .table-delete-page p{
     font-weight: 700;
     color: rgb(157, 1, 1);
-    margin-left: 5%;
+    margin-left: 10%;
     display: flex;
 }
 .table-delete-page button{
+    /* padding: 3px 25px 3px 25px ; */
     margin-left: 250px;
     border: none;
     margin-right: 15%;
     display: flex;
+    padding: 10px 35px 10px 35px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    
-
+    
 }
