food panel inside css update

--- a/frontend/src/componets/FoodPanel/FoodPanel.css
+++ b/frontend/src/componets/FoodPanel/FoodPanel.css
@@ -40,8 +40,7 @@
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
+     box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 .edit-foodtype{
     display: flex;
@@ -58,8 +57,7 @@
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
+     box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;}
 .delete-foodtype{
     display: flex;
     padding: 20px 20px 20px 20px;
@@ -74,8 +72,7 @@
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
+     box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 
 .food-panel-option-2{
@@ -96,8 +93,7 @@
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 .edit-fooddata{
     display: flex;
@@ -113,8 +109,7 @@
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
+     box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
 .delete-fooddata{
     display: flex;
@@ -130,6 +125,5 @@
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
+     box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
