--- a/frontend/src/componets/MessPanel/MessPanel.css
+++ b/frontend/src/componets/MessPanel/MessPanel.css
@@ -1,5 +1,5 @@
-/* bill panel entire css */
-.billPanel{
+/* mess panel body css */
+.mess-panel{
     margin-top: 1.5cm;
     background-color: #5a7bdca6;
     margin-right: 40%;
@@ -7,9 +7,10 @@
     margin-left: 35%;
     border-radius: 20px;
     box-shadow: rgba(99, 175, 146, 0.673) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-    align-items: center;}
-/* bill panel headng css */
-.head{
+    align-items: center;
+}
+/* mess panel heading css */
+#mess-panel-heading{
     background-color:  blanchedalmond;
     margin-top: 0.1cm;
     margin-bottom: 0.2cm;
@@ -17,25 +18,35 @@
     border-radius: 15px 15px 15px 15px;
     text-align: center;
     box-shadow:  rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-   
+
 }
-/* bill option css */
-.edit-bill-option a{
+.mess-panel-heading h1{
+    font-weight: bold;
+    
+}
+/* mess panel option css */
+.option-mess-panel a{
     display: inline-block;
     color: white;
     font-weight: 700;
     background-color: #1c3176fd;
-    margin-left: 20%;
+    margin-left: 1%;
     border-radius: 20px;
+    text-decoration: none;
     text-align: center;
     padding: 30px 55px 30px 55px;
-    margin: 3px 25% 15px 25%;
+    margin: 3px 40% 10px 30%;
 }
-.edit-bill-option a:hover{
+.edit-mess-panel{
     
+    text-align: center;
+}
+.option-mess-panel a:hover{
     color: #1c3176fd;
     font-weight: bold;
     background-color:rgba(255, 228, 196, 0.755); 
-      box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px -50px 36px -28px inset;
 }
+
+
 
