--- a/frontend/src/componets/Kitchenpanel/CRUDkitchen/ChangeFoodAvil.css
+++ b/frontend/src/componets/Kitchenpanel/CRUDkitchen/ChangeFoodAvil.css
@@ -1,5 +1,5 @@
 /* main body css */
-.EditWaiter-Data{
+.ChangeFoodAvail-Data{
     margin: 1.5cm 38% 1.7cm 38%;
     background-color: #5a7bdca6;
     border-radius: 20px;
@@ -7,59 +7,59 @@
     padding: 0px 0px 15px 0px;
 }
 /* headi css */
-#EditWaiter-Data-heading{
+#ChangeFoodAvail-Data-heading{
     /* font-weight:bolder bold; */
     background-color:blanchedalmond;
     text-align: center;
     font-weight: 700;
-    border-radius: 15px 15px 15px 15px;
+    border-radius: 25px 25px 15px 5px;
 }
-/* #EditWaiter-Data-heading h2{
-    font-weight:800;
+/* #ChangeFoodAvail-Data-heading h2{
+    font-weight: bold;
 } */
 
-.form-EditWaiter-Data{
+.form-ChangeFoodAvail-Data{
  text-align: center;
 }
-.EditWaiter-Data-label-1{
+.ChangeFoodAvail-Data-label-1{
     display: inline-block;
-    margin-left: 20%;
+    margin-left: 10%;
     margin-right: 2px;
     border: none;
     font-weight: 600;
 }
-.EditWaiter-Data-input-1{
+.ChangeFoodAvail-Data-input-1{
     margin-left: 10px;
     border:none;
     border-radius: 20px;
     padding: 5px 5px 7px 7px;
     background-color: rgb(226, 226, 250);
 }
-.EditWaiter-Data-input-1:focus{
+.ChangeFoodAvail-Data-input-1:focus{
     background-color: lightblue;
     border: none;
 }
-.EditWaiter-Data-input-2{
+.ChangeFoodAvail-Data-input-2{
     margin-left: 20px;
     border:none;
     border-radius: 20px;
     padding: 5px 5px 7px 7px;
     background-color: rgb(226, 226, 250);
 }
-.EditWaiter-Data-input-2:focus{
+.ChangeFoodAvail-Data-input-2:focus{
     background-color: lightblue;
 }
 
 
-.EditWaiter-submit{
+.ChangeFoodAvail-submit{
     background-color: rgb(156, 156, 29);
     color: aliceblue;
     font-size: large;
     padding: 5px 5px 5px 5px ; 
     margin-bottom: 0.5cm;
     border-radius: 1cm;
-    margin: 5px  15% 1px 155% ;
+    margin: 5px  15% 1px 15% ;
 }
-.EditWaiter-submit:hover{
+.ChangeFoodAvail-submit:hover{
     background-color: rgb(1, 1, 27);
 }
