--- a/frontend/src/componets/FoodPanel/CRUDfood/FoodType.css
+++ b/frontend/src/componets/FoodPanel/CRUDfood/FoodType.css
@@ -17,12 +17,12 @@
     margin-left: 25%;
     font-weight: 700;
 }
-input[type=text]{
+input[name=food-type-name]{
     border: none;
     border-radius: 10px;
    
 }
-input[type=text]:focus{
+input[name=food-type-name]:focus{
     background-color: lightblue;
     border: none;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
