--- a/frontend/src/componets/TablePanel/CRUDtable/TableCreate.css
+++ b/frontend/src/componets/TablePanel/CRUDtable/TableCreate.css
@@ -31,12 +31,18 @@ select[name=table_type]:focus{
     border: none;
     background-color:lightblue ;
 }
-input[type=number]{
+input[name=table-capacity]{
     border: none;
     border-radius: 10px;
    
 }
-input[type=table_no]:focus{
+input[name=table_no]{
+    border: none;
+    border-radius: 10px;
+   
+}
+
+input[name=table_no]:focus{
     background-color: lightblue;
    border: none;
    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
