--- a/frontend/src/components/CRM/CRM.css
+++ b/frontend/src/components/CRM/CRM.css
@@ -99,4 +99,7 @@
     background-color: #009087;
     transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
   }
-  
+ #foodCategory-1-crm{
+  border: none;
+  border-radius: 10px;
+ }
