--- a/frontend/src/components/Credit Sale/creditsale.css
+++ b/frontend/src/components/Credit Sale/creditsale.css
@@ -28,6 +28,8 @@
     border-radius: 100%;
     animation: ripple 0.6s linear infinite;
   }
+ 
+  
   
   @keyframes ripple {
     0% {
@@ -148,3 +150,16 @@
 .btn-53:hover span:nth-child(6) {
   transition-delay: 0.5s;
 }
+
+ /* css */
+
+.foodCategory-creditsale-span{
+  margin-left: 5px;
+}
+#foodCategory-1-creditsale{
+  border: none;
+  border-radius: 8px;
+}
+
+
+
