--- a/frontend/src/components/PayBack/Payback.css
+++ b/frontend/src/components/PayBack/Payback.css
@@ -61,6 +61,8 @@
   .inp input:hover {
     background: rgba(0, 0, 0, 0.01);
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.5);
+  }  .inp input[type="text"]::placeholder {
+    color: black; /* Change the color to black */
   }
   .inp input:not(:-moz-placeholder-shown) + .label {
     color: rgba(0, 0, 0, 0.5);
