--- a/frontend/src/components/DineIn/dinein.css
+++ b/frontend/src/components/DineIn/dinein.css
@@ -426,3 +426,56 @@ h2 {
   color: #777; /* Change color as needed */
   cursor: pointer;
 }
+/* CSSS */
+.close-btn-DINEIN{
+  position: absolute;
+  top: 3.7cm;
+  left: 16.3cm;
+  font-size: 30px;
+  color: rgb(214, 18, 18);
+  background-color: transparent;
+}
+#numberOfSea{
+  background-color: transparent;
+  border-radius: 5px;
+}
+#numberOfSea:focus{
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+}
+#add-user-btn-dienin{
+  padding: 10px 20px;
+  background-color:rgb(48, 149, 30);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  color:rgb(5, 6, 5);
+  /* border: 1px solid black; */
+  font-size: 16px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-top: 7px;
+  font-weight: 700;
+  margin-left: 850px;
+  margin: 7px 0px 0px 257px;
+  position: relative;
+  overflow: hidden;
+}
+
+#add-user-btn-dienin::before{
+  content: '';
+  position: absolute;
+  left: -101%;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  font-weight: 700;
+  background-color:rgb(247, 243, 243);
+  transition: left 0.3s;
+  z-index: 0;
+}
+
+#add-user-btn-dienin:hover::before{
+  left: 0%;
+  font-weight: 700;
+  color: rgb(3, 56, 3);
+  
+}
